--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+.vscode/
+ios
+android
+web
+linux
+macos
+windows
