--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   flutter_launcher_icons: ^0.9.3
   flutter_native_splash: ^2.2.4
   flutter_lints: ^2.0.1
-  shared_preferences: ^2.0.15
   firebase_core: ^1.19.2
   firebase_auth: ^3.4.2
   google_sign_in: ^5.4.0
@@ -53,6 +52,8 @@ dependencies:
   http: ^0.13.4
   like_button: ^2.0.4
   shimmer: ^2.0.0
+  shared_preferences: ^2.0.15
+  image_picker: ^0.8.5+3
   
 
 
