store user details

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "newslist",
         "posturl",
         "publshed",
-        "sportsapp"
+        "sportsapp",
+        "usercredential"
     ]
 }
