--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,11 @@
         "mtapp",
         "newslist",
         "posturl",
+        "prefs",
         "publshed",
         "sportsapp",
+        "themeprovider",
+        "UPLOADPFP",
         "usercredential"
     ]
 }
