--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "cSpell.words": [
         "Firestore",
         "getallleagues",
+        "matchday",
         "mtapp",
         "newslist",
         "posturl",
