--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "getallleagues",
         "matchday",
         "mtapp",
+        "mydate",
         "newslist",
         "posturl",
         "prefs",
