--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "matchday",
         "mtapp",
         "mydate",
+        "mymodal",
         "newslist",
         "posturl",
         "prefs",
