--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,20 +34,20 @@ dependencies:
   get: ^4.6.5
   flutter_svg: ^1.1.1+1
   provider: ^6.0.3
-  flutter_launcher_icons: ^0.9.3
+  flutter_launcher_icons: ^0.11.0
   flutter_native_splash: ^2.2.4
   flutter_lints: ^2.0.1
-  firebase_core: ^1.19.2
-  firebase_auth: ^3.4.2
-  google_sign_in: ^5.4.0
+  firebase_core: ^2.7.0
+  firebase_auth: ^4.2.2
+  google_sign_in: ^6.0.0
   # cloud_firestore: ^3.4.1
   file_picker: ^5.0.0
-  firebase_storage: ^10.3.4
-  cloud_firestore: ^3.3.0
+  firebase_storage: ^11.0.14
+  cloud_firestore: ^4.4.3
   # firebase_storage: ^10.3.2
-  firebase_messaging: ^12.0.0
-  firebase_crashlytics: ^2.8.5
-  firebase_analytics: ^9.2.0
+  firebase_messaging: ^14.2.5
+  firebase_crashlytics: ^3.0.15
+  firebase_analytics: ^10.1.4
   cached_network_image: ^3.2.1
   http: ^0.13.4
   like_button: ^2.0.4
@@ -55,16 +55,18 @@ dependencies:
   shared_preferences: ^2.0.15
   # image_picker: ^0.8.5+3
   image_picker: ^0.8.4+4
-  share_plus: ^4.0.10
-  device_info_plus: ^4.0.1
+  share_plus: ^6.3.1
+  device_info_plus: ^8.1.0
   # package_info_plus: ^1.4.3
   # sticky_headers: ^0.3.0+2
-  persistent_bottom_nav_bar: ^4.0.2
+  # persistent_bottom_nav_bar: ^4.0.2
+  # webview_flutter: ^4.0.4
   webview_flutter: ^3.0.4
-  intl: ^0.17.0
+
+  intl: ^0.18.0
   url_launcher: ^6.1.6
-  cloud_functions: ^3.3.9
-  path_provider: ^2.0.12
+  cloud_functions: ^4.0.11
+  # path_provider: ^2.0.12
   
 
   
