--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   intl: ^0.18.0
   url_launcher: ^6.1.6
   cloud_functions: ^4.0.11
+  connectivity_plus: ^3.0.4
+  avatar_glow: ^2.0.2
   # path_provider: ^2.0.12
   
 
