--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  - .env
   - assets/
   - assets/icons/
   - assets/images/
