--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   avatar_glow: ^2.0.2
   sign_in_with_apple: ^4.3.0
   flutter_dotenv: ^5.1.0
+  crypto: ^3.0.3
   # path_provider: ^2.0.12
   
 
