--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.2
   google_sign_in: ^6.0.0
-  file_picker: ^5.0.0
+  file_picker: ^5.2.10
   firebase_storage: ^11.0.14
   cloud_firestore: ^4.4.3
   firebase_messaging: ^14.2.5
@@ -69,6 +69,8 @@ dependencies:
   sign_in_with_apple: ^4.3.0
   flutter_dotenv: ^5.1.0
   crypto: ^3.0.3
+  video_player: ^2.6.1
+  flutter_downloader: ^1.10.4
   # path_provider: ^2.0.12
   
 
